--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PersonalTrainer"
         tools:targetApi="31">
-
+        <activity
+            android:name=".view.Categoria.GestionarCategoriaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.Categoria.ListaCategoriaActivity"
+            android:exported="false" />
         <activity
             android:name=".view.Cliente.GestionarClienteActivity"
             android:exported="false" />
