--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.PersonalTrainer"
         tools:targetApi="31">
         <activity
+            android:name=".view.Ejercicio.GestionarEjercicioActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.Ejercicio.ListaEjercicioActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.Categoria.GestionarCategoriaActivity"
             android:exported="false" />
         <activity
