--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.PersonalTrainer"
         tools:targetApi="31">
         <activity
+            android:name=".view.Rutina.ListaRutinasActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.Rutina.GestionarRutinaActivity"
             android:exported="false" />
         <activity
